# PathLinker

./: README.md  README_CN.md  init.sh  log.txt  package-lock.json  package.json  pathlinker.db  registe.bat  register.bat  sqlite3.lib
scripts/: database_update.py  database_update.spec  log.txt  test.ipynb
src/: App.css  App.jsx  i18n.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  build.rs  pathlinker.db  tauri.conf.json
src-tauri/libs/: Cargo.toml
src-tauri/libs/src/: crud.rs  db.rs  lib.rs  path_struct.rs  utils.rs
src-tauri/src/: backend_opearation.rs  hotkey_watcher.rs  main.rs
src-tauri/tests/: crud_test.rs  db_test.rs  hard_link.rs  open_file.rs
src/compoents/: file_selector.jsx  settings.jsx  table.jsx  test.jsx
