[package]
name = "libs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1", features = [ "clipboard-all", "path-all", "dialog-all", "shell-open"] }
arboard = "3.3.2"
chrono = "0.4.35"
device_query = "2.0.0"
dirs = "5.0.1"
mockito = "1.4.0"
rand = "0.8.5"
rusqlite = "0.31.0"
serde = {version = "1.0.197" , features = ["derive"]}
uuid = { version="1.8.0", features = ["v4"]}
whoami = "1.5.1"
